test/fail/hex_punc07.v3
//@parse = ParseError @ 3:31
class hex_punc01 {
	var d: int = 0x.0003450;
}
